@@ -723,7 +723,6 @@ SEXP dup_mMatrix_as_geMatrix(SEXP A)
 	MATRIX_VALID_ndense, /* 5  */
 	""};
     SEXP ans, ad = R_NilValue, an = R_NilValue;	/* -Wall */
-    R_xlen_t sz;
     int ctype = R_check_class_etc(A, valid),
 	nprot = 1;
     enum dense_enum M_type = ddense /* -Wall */;
@@ -779,13 +778,14 @@ SEXP dup_mMatrix_as_geMatrix(SEXP A)
     ans = PROTECT(NEW_OBJECT_OF_CLASS(M_type == ddense ? "dgeMatrix" :
 				      (M_type == ldense ? "lgeMatrix" :
 					 "ngeMatrix")));
-#define DUP_MMATRIX_SET_1						\
+#define DUP_MMATRIX_SET_1(_IS_SYM_) do {				\
     SET_SLOT(ans, Matrix_DimSym, duplicate(ad));			\
-    SET_SLOT(ans, Matrix_DimNamesSym, (!isNull(an) && LENGTH(an) == 2) ? \
-	     duplicate(an): allocVector(VECSXP, 2));			\
-    sz = (R_xlen_t) INTEGER(ad)[0] * INTEGER(ad)[1]
+    SET_SLOT(ans, Matrix_DimNamesSym, _IS_SYM_ ? symmetric_DimNames(an) : \
+       (!isNull(an) && LENGTH(an) == 2) ? duplicate(an): allocVector(VECSXP,2)); \
+} while(0)
 
-    DUP_MMATRIX_SET_1;
+    R_xlen_t sz = ((R_xlen_t) INTEGER(ad)[0]) * INTEGER(ad)[1];
+    Rboolean is_symm = FALSE;
 
     if(M_type == ddense) { /* ddense -> dge */
 
@@ -810,6 +810,7 @@ SEXP dup_mMatrix_as_geMatrix(SEXP A)
 	case 14:	 		/* ---	corMatrix */			\
 	    Memcpy(ansx, REAL(GET_SLOT(A, Matrix_xSym)), sz);			\
 	    make_d_matrix_symmetric(ansx, A);					\
+	    is_symm = TRUE;							\
 	    break;								\
 	case 5:			/* ddiMatrix */					\
 	    install_diagonal(ansx, A);						\
@@ -827,10 +828,12 @@ SEXP dup_mMatrix_as_geMatrix(SEXP A)
 				  INTEGER(ad)[0],				\
 				  *uplo_P(A) == 'U' ? UPP : LOW);		\
 	    make_d_matrix_symmetric(ansx, A);					\
+	    is_symm = TRUE;							\
 	    break;								\
 	}  /* switch(ctype) */
 
-	DUP_MMATRIX_ddense_CASES;
+	DUP_MMATRIX_ddense_CASES; // also setting  is_symm
+	DUP_MMATRIX_SET_1(is_symm);
     }
     else { /* M_type == ldense || M_type = ndense  */
 	/* ldense -> lge */
@@ -855,6 +858,7 @@ SEXP dup_mMatrix_as_geMatrix(SEXP A)
 	case 3+14+6:			/* nsyMatrix */
 	    Memcpy(ansx, LOGICAL(GET_SLOT(A, Matrix_xSym)), sz);
 	    make_i_matrix_symmetric(ansx, A);
+	    is_symm = TRUE;
 	    break;
 	case 4+14:			/* ldiMatrix */
 	    // case 4+14+6:      /* ndiMatrix _DOES NOT EXIST_ */
@@ -873,11 +877,14 @@ SEXP dup_mMatrix_as_geMatrix(SEXP A)
 			       INTEGER(ad)[0],
 			       *uplo_P(A) == 'U' ? UPP : LOW);
 	    make_i_matrix_symmetric(ansx, A);
+	    is_symm = TRUE;
 	    break;
 
 	default:
 	    error(_("unexpected ctype = %d in dup_mMatrix_as_geMatrix"), ctype);
 	}  /* switch(ctype) */
+
+	DUP_MMATRIX_SET_1(is_symm);
 
     }  /* if(M_type == .) */
 
@@ -890,7 +897,6 @@ SEXP dup_mMatrix_as_dgeMatrix2(SEXP A, Rboolean tr_if_vec)
     SEXP ans = PROTECT(NEW_OBJECT_OF_CLASS("dgeMatrix")),
 	ad = R_NilValue , an = R_NilValue;	/* -Wall */
     static const char *valid[] = {"_NOT_A_CLASS_", MATRIX_VALID_ddense, ""};
-    R_xlen_t sz;
     int ctype = R_check_class_etc(A, valid), nprot = 1;
     double *ansx;
 
@@ -909,8 +915,10 @@ SEXP dup_mMatrix_as_dgeMatrix2(SEXP A, Rboolean tr_if_vec)
 	DUP_MMATRIX_NON_CLASS(tr_if_vec);
     }
 
-    DUP_MMATRIX_SET_1;
-    DUP_MMATRIX_ddense_CASES;
+    R_xlen_t sz = ((R_xlen_t) INTEGER(ad)[0]) * INTEGER(ad)[1];
+    Rboolean is_symm = FALSE;
+    DUP_MMATRIX_ddense_CASES; // also setting  is_symm
+    DUP_MMATRIX_SET_1(is_symm);
     UNPROTECT(nprot);
     return ans;
 }
@@ -928,7 +936,7 @@ SEXP new_dgeMatrix(int nrow, int ncol)
     INTEGER(ad)[1] = ncol;
     SET_SLOT(ans, Matrix_DimSym, ad);
     SET_SLOT(ans, Matrix_DimNamesSym, allocVector(VECSXP, 2));
-    ALLOC_SLOT(ans, Matrix_xSym, REALSXP, nrow * ncol);
+    ALLOC_SLOT(ans, Matrix_xSym, REALSXP, ((R_xlen_t) nrow) * ncol);
 
     UNPROTECT(2);
     return ans;
@@ -1378,7 +1386,6 @@ SEXP symmetric_DimNames(SEXP dn) {
 SEXP R_symmetric_Dimnames(SEXP x) {
     return symmetric_DimNames(GET_SLOT(x, Matrix_DimNamesSym));
 }
-
 
 /**
  * Set 'Dimnames' slot of 'dest' from the one of 'src' when
