@@ -113,14 +113,16 @@ SEXP dsyMatrix_matrix_mm(SEXP a, SEXP b, SEXP rtP)
     int *adims = INTEGER(GET_SLOT(a, Matrix_DimSym)),
 	*bdims = INTEGER(GET_SLOT(val, Matrix_DimSym)),
 	m = bdims[0], n = bdims[1];
+
+    if ((rt && n != adims[0]) || (!rt && m != adims[0]))
+	error(_("Matrices are not conformable for multiplication"));
+
     double one = 1., zero = 0.;
     R_xlen_t mn = m * (R_xlen_t)n;
     double *bcp, *vx = REAL(GET_SLOT(val, Matrix_xSym));
     C_or_Alloca_TO(bcp, mn, double);
     Memcpy(bcp, vx, mn);
 
-    if ((rt && n != adims[0]) || (!rt && m != adims[0]))
-	error(_("Matrices are not conformable for multiplication"));
     if (m >=1 && n >= 1)
 	F77_CALL(dsymm)(rt ? "R" :"L", uplo_P(a), &m, &n, &one,
 			REAL(GET_SLOT(a, Matrix_xSym)), adims, bcp,
@@ -129,7 +131,8 @@ SEXP dsyMatrix_matrix_mm(SEXP a, SEXP b, SEXP rtP)
     int nd = rt ?
 	1 : // v <- b %*% a : rownames(v) == rownames(b)  are already there
 	0;  // v <- a %*% b : colnames(v) == colnames(b)  are already there
-    SEXP nms = PROTECT(duplicate(VECTOR_ELT(GET_SLOT(a, Matrix_DimNamesSym), nd)));
+    SEXP nms = PROTECT(VECTOR_ELT(
+		symmetric_DimNames(GET_SLOT(a, Matrix_DimNamesSym)), nd));
     SET_VECTOR_ELT(GET_SLOT(val, Matrix_DimNamesSym), nd, nms);
     if(mn >= SMALL_4_Alloca) Free(bcp);
     UNPROTECT(2);
