@@ -110,14 +110,16 @@ SEXP ltrMatrix_as_lgeMatrix(SEXP from, SEXP kind)
     return val;
 }
 
-/* this is very close to dsyMatrix_as_dge*() :*/
+// this is somewhat close to dup_mMatrix_as_geMatrix(.)) :
 SEXP lsyMatrix_as_lgeMatrix(SEXP from, SEXP kind)
 {
     SEXP val = PROTECT(NEW_OBJECT_OF_CLASS(
 			   (asInteger(kind) == 1) ? "ngeMatrix" : "lgeMatrix"));
     slot_dup(val, from, Matrix_xSym);
     slot_dup(val, from, Matrix_DimSym);
-    slot_dup(val, from, Matrix_DimNamesSym);
+    // slot_dup(val, from, Matrix_DimNamesSym) + symmetric_Dimnames():
+    SET_SLOT(val, Matrix_DimNamesSym,
+	     symmetric_DimNames(duplicate(GET_SLOT(from, Matrix_DimNamesSym))));
     SET_SLOT(val, Matrix_factorSym, allocVector(VECSXP, 0));
 
     make_i_matrix_symmetric(LOGICAL(GET_SLOT(val, Matrix_xSym)), from);
